Fix too small max width

--- a/src/static/css/commandline.css
+++ b/src/static/css/commandline.css
@@ -83,10 +83,12 @@ input:focus {
     width: 6em;
 }
 #completions table tr td.tgroup {
-    width: 0;
     min-width: fit-content;
     padding-left: 0.5em;
     text-align: right;
+}
+#completions table tr td.tgroup:empty {
+    display: none;
 }
 /* #completions table tr td:nth-of-type(3) { width: 5em; } */
 #completions table tr td.content {
